updating mobile styling; added nexus 5; fixed horizontal scrolling problem

--- a/public/css/bagsintrees.css
+++ b/public/css/bagsintrees.css
@@ -209,7 +209,7 @@ h4 {
     text-decoration: none
 }
 .navigation-mobile {
-    margin-top:4px;
+    margin-top:38px;
     margin-right:4px;
     padding-top: 5px;
     color: #4D4834;
@@ -393,7 +393,6 @@ h4 {
 #sticky-header {
     height: 70px;
     padding-bottom: 8px;
-    padding-left: 4px;
 }
 .site-logo {
     height: 70px;
