--- a/public/css/media-600.css
+++ b/public/css/media-600.css
@@ -61,7 +61,6 @@
     }
     #sticky-header {
         padding-bottom: 6px;
-        padding-left: 4px;
         padding-right: 0px;
         height: 35px;
     }
@@ -110,6 +109,7 @@
     }
     .navigation-mobile {
         display: block;
+        margin-top: 8px;
     }
     #full-pin-img {
         display: none;
